--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,5 @@
 name: CI workflow
+
 on:
   push:
     branches:
@@ -6,7 +7,23 @@ on:
   pull_request:
     branches:
       - "main"
+
 jobs:
   build:
     runs-on: ubuntu-latest
     container: node:20-alpine
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          npm ci
+
+      - name: Lint with ESLint
+        run: |
+          npm run lint
+      
+      - name: Run unit tests with Jest
+        run: npm test -- --coverage
+        
